--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>map</title>
 
-    <link rel="stylesheet" href="./main.css">
+	<style>
+		#map {
+			width: 100%;
+			height: 500px;
+		}
+
+		.link {
+			margin-top: 20px;
+			color: black;
+			display: block;
+
+			font-size: 20px;
+			margin-bottom: 20px;
+			width: 100%;
+		}
+	</style>
 </head>
 <body>
 
