--- a/index.html
+++ b/index.html
@@ -1,4 +1,107 @@
-<footer id="contacts">
+<!DOCTYPE html>
+<html lang="ua">
+<head>
+	<meta charset="UTF-8">
+	<title>IRSHA BAR</title>
+	<link rel="stylesheet" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Prata" rel="stylesheet">
+</head>
+<body>
+	<header>
+		<div class="dark-fon">
+			<div class="nav-container <?php echo ($_SERVER['REQUEST_URI'] == "/login.php" ? "fixed" : "");  ?>">
+	<div class="logo">
+		<a href="index">
+			<div>
+				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="50px" height="50px" width="50px" height="50px">
+						<path d="M414.405,154.709c-0.213-0.384-0.448-0.704-0.704-1.067c-1.131-1.493-2.496-2.752-4.245-3.477c0,0,0-0.021-0.021-0.021
+							c-0.043-0.021-0.064,0-0.107,0c-1.237-0.512-2.581-0.811-3.989-0.811c-0.384,0-0.64,0.277-1.003,0.299
+							c-1.024,0.107-1.899,0.469-2.859,0.853c-1.003,0.405-1.92,0.789-2.731,1.451c-0.277,0.235-0.683,0.235-0.939,0.491l-3.84,3.84
+							c-0.811,0.363-1.813,0.747-2.944,1.131c-1.131,0.384-2.24,0.768-3.669,1.152c-1.643,0.448-3.648,0.896-5.675,1.344
+							c-1.749,0.384-3.435,0.768-5.461,1.152c-2.411,0.448-5.205,0.896-8,1.344c-2.283,0.363-4.459,0.725-6.997,1.088
+							c-3.179,0.448-6.784,0.853-10.347,1.28c-2.773,0.32-5.397,0.661-8.405,0.981c-3.925,0.405-8.32,0.768-12.629,1.131
+							c-3.179,0.277-6.208,0.576-9.6,0.811c-4.843,0.363-10.155,0.64-15.381,0.939c-3.392,0.192-6.571,0.427-10.112,0.597
+							c-6.037,0.277-12.565,0.491-19.051,0.683c-3.243,0.107-6.251,0.256-9.6,0.32c-9.984,0.32-20.459,0.448-31.424,0.448
+							c-9.877,0-19.307-0.128-28.437-0.32c-2.987-0.064-5.781-0.171-8.683-0.235c-2.368-0.064-4.608-0.171-6.912-0.235l-13.696-19.243
+							c17.536-0.789,36.693-1.301,57.728-1.301h42.667c5.888,0,10.667-4.779,10.667-10.667S283.226,128,277.338,128h-42.667
+							c-23.808,0-48.875,0.491-72.576,1.771l-34.837-48.896l91.989-61.333c3.925-2.603,5.653-7.467,4.288-11.968
+							C222.17,3.072,218.053,0,213.338,0H64.005c-4.587,0-8.661,2.944-10.133,7.296l-42.667,128c-1.429,4.331,0.021,9.088,3.648,11.861
+							c1.92,1.451,4.203,2.176,6.485,2.176c2.069,0,4.117-0.597,5.909-1.792l82.24-54.827l27.627,38.784
+							c-40.341,3.477-72.661,10.112-81.28,21.995c-0.299,0.384-0.619,0.704-0.875,1.131c-0.981,1.707-1.621,3.477-1.621,5.376
+							c0,1.771,0.512,3.435,1.365,5.035c0.277,0.512,0.789,1.003,1.173,1.515c0.747,1.003,1.515,2.027,2.603,2.965
+							c0.192,0.149,0.256,0.341,0.448,0.491l165.077,165.077v114.133c-85.077,10.411-85.333,23.104-85.333,30.784
+							c0,30.464,79.979,32,96,32s96-1.536,96-32c0-7.701-0.256-20.373-85.333-30.784V335.083l165.077-165.077
+							c0.192-0.149,0.256-0.341,0.448-0.512c1.088-0.939,1.856-1.941,2.603-2.965c0.363-0.512,0.875-0.981,1.173-1.515
+							c0.853-1.579,1.365-3.243,1.365-5.013C416.005,158.037,415.322,156.288,414.405,154.709z M155.93,168.192
+							c-2.752-0.192-5.547-0.363-8.171-0.555c-4.992-0.384-9.685-0.789-14.229-1.216c-1.92-0.192-4.011-0.363-5.845-0.533
+							c-6.144-0.619-11.883-1.28-17.088-1.984c-1.045-0.149-1.856-0.299-2.859-0.427c-4.075-0.576-7.915-1.173-11.349-1.771
+							c-1.451-0.256-2.709-0.512-4.053-0.768c-1.664-0.32-3.136-0.661-4.608-0.981c13.547-2.965,35.541-5.845,64.064-7.851
+							l11.797,16.533C161.029,168.491,158.384,168.363,155.93,168.192z" fill="#FFFFFF"/>
+						<path d="M405.338,64c-48.491,0-89.6,38.571-96,85.333c37.675-2.453,65.003-7.979,74.667-10.667
+							c6.037-6.059,12.8-10.667,21.333-10.667c4.245,0,8.405,0.832,12.309,2.475c11.947,4.928,19.691,16.533,19.691,29.525
+							c0,10.027-4.779,19.456-13.419,26.517l-44.352,44.395l-2.197,10.432c-0.576,2.773-0.043,5.653,1.515,8.021
+							c1.536,2.368,3.968,4.011,6.72,4.587c6.485,1.365,13.099,2.048,19.733,2.048c52.928,0,96-43.072,96-96S458.266,64,405.338,64z" fill="#FFFFFF"/>
+				</svg>
+			</div>
+		</a>
+	</div>
+	<nav class="main-nav">
+		<ul class="nav-list">
+			<li class="nav-item"><a href="index.php">Головна</a></li>
+			<li class="nav-item"><a href="index.php#about">Про нас</a></li>
+			<li class="nav-item"><a href="menu.php">Меню</a></li>
+
+			<li class="nav-item"><a href="#contacts">Контакти</a></li>
+		</ul>
+	</nav>
+	<div class="logo">
+		<a href="login.php">
+			<div title="Увійти">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="50px" height="50px" title="entry-logo">
+							<path d="M173.781,280.469c-4.16,4.16-4.16,10.923,0,15.083c2.091,2.069,4.821,3.115,7.552,3.115c2.731,0,5.461-1.045,7.531-3.115     l64-64c0.981-0.981,1.771-2.176,2.304-3.477c0.299-0.747,0.341-1.515,0.469-2.304c0.107-0.597,0.363-1.152,0.363-1.771     c0-0.811-0.299-1.536-0.469-2.283c-0.128-0.576-0.128-1.195-0.363-1.749c-0.555-1.344-1.365-2.539-2.368-3.563l-63.936-63.936     c-4.16-4.16-10.923-4.16-15.083,0c-4.16,4.16-4.16,10.923,0,15.083l45.76,45.781H32c-5.888,0-10.667,4.779-10.667,10.667     S26.112,234.667,32,234.667h187.584L173.781,280.469z" fill="#FFFFFF"/>
+							<path d="M444.608,0c-1.643,0-3.243,0.32-4.843,0.491C438.955,0.299,438.187,0,437.333,0h-256C151.936,0,128,23.936,128,53.333     V160c0,5.888,4.779,10.667,10.667,10.667s10.667-4.779,10.667-10.667V53.333c0-17.643,14.357-32,32-32h204.032l-80.107,34.325     c-16.96,7.275-27.925,23.893-27.925,42.347v328.661h-96c-15.339,0-28.373-10.667-31.552-15.083l-0.448-123.627     c-0.021-5.867-4.8-10.624-10.667-10.624c0,0-0.021,0-0.043,0c-5.888,0.021-10.645,4.821-10.624,10.709l0.491,124.309     c-0.427,4.672,1.771,9.557,6.677,14.933c8.725,9.557,26.048,20.715,46.165,20.715h96v17.941     c0,25.387,20.672,46.059,46.059,46.059c6.293,0,12.416-1.259,18.133-3.712l121.216-51.947     c16.96-7.275,27.925-23.893,27.925-42.347V46.059C490.667,20.672,469.995,0,444.608,0z M469.333,413.995     c0,9.899-5.888,18.837-14.997,22.72L333.12,488.661c-3.072,1.344-6.357,2.005-9.728,2.005c-13.632,0-24.725-11.093-24.725-24.725     V98.005c0-9.899,5.888-18.837,14.997-22.72L434.88,23.339c3.072-1.344,6.357-2.005,9.728-2.005     c13.632,0,24.725,11.093,24.725,24.725V413.995z" fill="#FFFFFF"/>
+							<path d="M330.667,234.667c-5.888,0-10.667,4.779-10.667,10.667V288c0,5.888,4.779,10.667,10.667,10.667     s10.667-4.779,10.667-10.667v-42.667C341.333,239.445,336.555,234.667,330.667,234.667z" fill="#FFFFFF"/>
+							</svg>
+							</div>
+		</a>
+	</div>
+</div>
+			<div class="container main-container">
+				<div class="main-info">
+					<h1>IRSHA BAR</h1>
+					<p>НЕ ЗНАЄШ ДЕ ВІДПОЧИТИ, ТА ЯК ГАРНО ПРОВЕСТИ ЧАС? ТОДІ ТОБІ ДО НАС</p>
+					<div class="main-buttons">
+						<a href="#about" class="first-main-button">Дізнатись більше</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<main>
+		<section class="about" id="about">
+			<h2>Вітаємо в нашому кафе</h2>
+			<p>Гарний заклад, де можна просто відпочити та поспілкуватись з друзями, або ж відірватись на повну. Посидіти попити сочку, чи спробувати унікальних коктейлів від наших барменів. Скуштувати найсмачнішу піццу, або просто погризти чіпсів.</p>
+			<a class="button" href="menu">Переглянути меню</a>
+		</section>
+		<section class="techno-part">
+			<div class="tecno-description">
+				<div class="tecno-text">
+					<h3>Чому ми особливі?</h3>
+					<p>Ми не особливі, але у нас класно. Це місце де можна розслабитись та відпочити від сірих буднів. А наша атмосфера зроблять ваш настрій та залишать незабутні спогади на довго.</p>
+				</div>
+				<div class="tecno-photo">
+					
+				</div>
+			</div>
+			<div class="tecno-images">
+				<div class="img-item"></div>
+				<div class="img-item"></div>
+				<div class="img-item"></div>
+			</div>
+		</section>
+		
+	</main>
+	<footer id="contacts">
 	<div class="container">
 		<div class="footer-col1">
 			<h1>IRSHA BAR</h1>
@@ -42,13 +145,25 @@
 					e.preventDefault();
 					window.footerMap.makeRoute();
 				});
-				//AIzaSyCpGlb7OvqiPwCftfQpJY3MMvO_CNQuMmo
 			}
 		</script>
-		<script asynch defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8nsIrrDrC7Ww9iV_QwLL3-itWVrRUmyU&callback=initMap"
+		<script asynch defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpGlb7OvqiPwCftfQpJY3MMvO_CNQuMmo&callback=initMap"
 			type="text/javascript"></script>
 		
 	</div>
 	
 
 </footer>
+	
+    <script src="js/main.js" ></script>
+</body>
+</html>
+
+<?php
+session_start();
+	
+if(!empty($_SESSION['ErrorMessage'])) {
+	echo "<script>alert(\"" . $_SESSION['ErrorMessage'] . "\");</script>";
+	$_SESSION['ErrorMessage'] = "";
+}
+?>
